minor text edits from initial review

--- a/src/content/docs/en/guides/backend.mdx
+++ b/src/content/docs/en/guides/backend.mdx
@@ -15,7 +15,7 @@ Note that many of these pages are **stubs**: they're collections of resources wa
 
 ## What is a backend service?
 
-A backend service is a cloud-based system that helps you build and manage your backend infrastructure. It provides a set of tools and services for managing databases, user authentication, and other server-side functionality. This enables you to focus on build your applications without having to worry about managing the underlying infrastructure.
+A backend service is a cloud-based system that helps you build and manage your backend infrastructure. It provides a set of tools and services for managing databases, user authentication, and other server-side functionality. This enables you to focus on building your applications without having to worry about managing the underlying infrastructure.
 
 ## Why would I use a backend service?
 
