--- a/src/content/docs/en/guides/backend/tigris.mdx
+++ b/src/content/docs/en/guides/backend/tigris.mdx
@@ -6,7 +6,7 @@ service: Tigris
 stub: true
 ---
 
-Tigris is a NoSQL database and search platform that provides data services to interact with the data. It provides an official [Astro integration](https://github.com/tigrisdata/tigris-astro) 
+Tigris is an open source alternative to MongoDB and DynamoDB. It is a serverless NoSQL database and search platform with their own official [Astro integration](https://github.com/tigrisdata/tigris-astro).
 
 ## Official Resources
 - [Creating database-driven Astro sites with the Tigris Astro integration](https://www.tigrisdata.com/blog/astro-tigris-integration/)
