--- a/src/content/docs/en/guides/backend.mdx
+++ b/src/content/docs/en/guides/backend.mdx
@@ -19,11 +19,9 @@ A backend service is a cloud-based system that helps you build and manage your b
 
 ## Why would I use a backend service?
 
-If your project has complex server-side needs, like:
+You might want to consider a backend service if your project has complex server-side needs, for example:
 - user signups and authentication
 - persistant data storage
 - user-uploaded asset storage
 - API generation
 - realtime communication
-
-You might want to consider a backend service.
