Apply suggestions from code review

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -238,7 +238,9 @@ Since browsers support HTTP streaming, a document will be broken up into chunks,
 
 Astro additionally uses streaming to help "unblock" data fetching. Before this feature, Astro would wait until all data finished loading before sending HTML. Now, Astro will render and send components over the network until it finds one that `await`s a Promise. It will wait for the component's Promises to resolve, then render and send the component over the network. 
 
-For example, the following page `await`s some data in its frontmatter. Astro will wait for all of the `fetch` calls to resolve before sending any HTML to the browser.
+### Using streaming to improve page performance
+
+The following page `await`s some data in its frontmatter. Astro will wait for all of the `fetch` calls to resolve before sending any HTML to the browser.
 
 ```astro title="src/pages/index.astro"
 ---
@@ -261,7 +263,7 @@ const factData = await factResponse.json();
 </html>
 ```
 
-Only the two paragraphs actually depend on the data. It would be better if Astro could render the title and the rest of the HTML first, and then send the paragraphs when the data is ready. You can do that by moving the `await` calls into smaller components: 
+Moving the `await` calls into smaller components allows you to take advantage of Astro's streaming. Using the following components, Astro can render some HTML first, such as the title, then send the paragraphs when the data is ready.
 
 ```astro title="src/components/RandomName.astro"
 ---
