explicit mention of components fetching data

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -264,7 +264,7 @@ const factData = await factResponse.json();
 </html>
 ```
 
-Moving the `await` calls into smaller components allows you to take advantage of Astro's streaming. Using the following components, Astro can render some HTML first, such as the title, then send the paragraphs when the data is ready.
+Moving the `await` calls into smaller components allows you to take advantage of Astro's streaming. Using the following components to perform the data fetches, Astro can render some HTML first, such as the title, and then the paragraphs when the data is ready.
 
 ```astro title="src/components/RandomName.astro"
 ---
