reorder to break up code

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -283,6 +283,9 @@ const factData = await factResponse.json();
 <p>{factData.fact}</p>
 ```
 
+
+The Astro page below using these components can render parts of the page sooner. The `<head`>, `<body>`, and `<h1>` tags are no longer blocked by data fetches. The browser will then wait for `RandomName` to finish loading its Promises, and then send the resulting HTML over the network. It will render the next heading, and then it will wait for `RandomFact` and send its resulting HTML over the browser.
+
 ```astro title="src/pages/index.astro"
 ---
 import RandomName from '../components/RandomName.astro'
@@ -300,8 +303,6 @@ import RandomFact from '../components/RandomFact.astro'
   </body>
 </html>
 ```
-
-The page will now send each part of the page whenever it is ready. Astro will first send the `head`, `body`, and `h1` tags to the browser. It will then wait for `RandomName` to finish loading its Promises, and then send the resulting HTML over the network. It will render the next heading, and then it will wait for `RandomFact` and send its resulting HTML over the browser.
 
 #### Including Promises directly
 
