too many backends

--- a/src/content/docs/en/guides/backend.mdx
+++ b/src/content/docs/en/guides/backend.mdx
@@ -5,7 +5,7 @@ i18nReady: true
 ---
 import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
 
-**Ready to add a backend to your Astro project?** Follow one of our guides to integrate a backend service.
+**Ready to add features like authentication, storage or data to your Astro project?** Follow one of our guides to integrate a backend service.
 
 ## Backend service guides
 
