--- a/src/content/docs/en/guides/backend/appwriteio.mdx
+++ b/src/content/docs/en/guides/backend/appwriteio.mdx
@@ -9,4 +9,4 @@ stub: true
 [Appwrite](https://appwrite.io/) is a self-hosted backend-as-a-service platform that provides authentication and account management, user preferences, database and storage persistence, cloud functions, localization, image manipulation, and other server-side utilities.
 
 ## Official Resources
-- [AppWrite Demos for Astro](https://github.com/appwrite/demos-for-astro)
+- [Appwrite Demos for Astro](https://github.com/appwrite/demos-for-astro)
