add community resource for firebase

--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -10,3 +10,7 @@ import FileTree from '~/components/FileTree.astro'
 
 
 [Firebase](https://firebase.google.com/) is an app development platform that provides a NoSQL database, authentication, realtime subscriptions, functions, and storage.
+
+## Community Resources
+
+- [Astro and firebase SSR app example](https://github.com/kevinzunigacuellar/astro-firebase)
