--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -13,4 +13,4 @@ import FileTree from '~/components/FileTree.astro'
 
 ## Community Resources
 
-- [Astro and firebase SSR app example](https://github.com/kevinzunigacuellar/astro-firebase)
+- [Astro and Firebase SSR app example](https://github.com/kevinzunigacuellar/astro-firebase)
