--- a/src/content/docs/es/guides/migrate-to-astro/from-gridsome.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-gridsome.mdx
@@ -19,7 +19,7 @@ Gridsome y Astro comparten algunas similitudes que te ayudarán a migrar tu proy
 
 - Gridsome y Astro utilizan una carpeta `src/` para los archivos de tu proyecto y una [carpeta especial `src/pages/` para el enrutamiento basado en archivos](/es/core-concepts/astro-pages/). La creación y gestión de páginas para tu sitio debería resultarte familiar.
 
-- Astro cuenta con [una integración oficial para usar componentes Vue](/es/guides/integrations-guide/vue/) y soporta [la instalación de paquetes NPM](/es/guides/imports/#paquetes-npm), incluyendo varios para Vue. Podrás escribir componentes de UI de Vue y es posible que puedas conservar algunos o todos tus componentes y dependencias de Vue de Gridsome existentes.
+- Astro cuenta con [una integración oficial para usar componentes de Vue](/es/guides/integrations-guide/vue/) y admite [la instalación de paquetes NPM](/es/guides/imports/#paquetes-npm), incluyendo varios para Vue. Podrás escribir componentes de UI de Vue y es posible que puedas conservar algunos o todos tus componentes y dependencias de Vue de Gridsome existentes.
 
 - Astro y Gridsome te permiten utilizar un [headless CMS, APIs o archivos Markdown para los datos](/es/guides/data-fetching/). Puedes seguir usando tu sistema preferido de [creación de contenido](/es/guides/content/), y podrás mantener todo tu contenido existente.
 
