--- a/src/content/docs/es/guides/migrate-to-astro/from-gridsome.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-gridsome.mdx
@@ -31,7 +31,7 @@ Cuando reconstruyas tu sitio de Gridsome a Astro, notarás algunas diferencias i
 
 - Como una SPA, Gridsome utiliza `vue-router` para el enrutamiento SPA, y `vue-meta` para gestionar la etiqueta `<head>`. En Astro, crearás páginas HTML separadas y controlarás la etiqueta `<head>` de cada página directamente, o a través de un [componente de diseño](/es/core-concepts/layouts/).
 
-- [Datos de archivos locales](/es/guides/imports/): Gridsome utiliza GraphQL para recuperar los datos de tu proyecto. Astro usa importaciones ESM y el helper [`Astro.glob()`](/es/guides/imports/#astroglob) para importar los datos de archivos locales del proyecto. Los recursos remotos pueden cargarse utilizando el API estándar `fetch()`. GraphQL se puede añadir opcionalmente a su proyecto, pero no está incluido por defecto.
+- [Datos de archivos locales](/es/guides/imports/): Gridsome utiliza GraphQL para recuperar los datos de tu proyecto. Astro usa importaciones ESM y el helper [`Astro.glob()`](/es/guides/imports/#astroglob) para importar los datos de archivos locales del proyecto. Los recursos remotos pueden cargarse utilizando el API estándar `fetch()`. GraphQL se puede añadir opcionalmente a tu proyecto, pero no está incluido por defecto.
 
 ## Migrar desde Gridsome a Astro
 
