Update `configuration-reference.mdx` translation

--- a/src/content/docs/pt-br/reference/configuration-reference.mdx
+++ b/src/content/docs/pt-br/reference/configuration-reference.mdx
@@ -423,21 +423,22 @@ Define headers de resposta HTTP customizados a serem enviados em `astro dev` e `
 
 <p>
 
-**Tipo:** `'astro/assets/services/sharp' | 'astro/assets/services/squoosh' | string`<br />
-**Padrão:** `'astro/assets/services/squoosh'`<br />
+**Tipo:** `Object`<br />
+**Padrão:** `{entrypoint: 'astro/assets/services/squoosh', config?: {}}`<br />
 <Since v="2.1.0" />
 </p>
 
 Defina que serviço de imagem será usado para o suporte experimental de assets do Astro.
 
-O valor deve ser um especificador de módulo para o serviço de imagem a ser utilizado:
-seja um dos serviços integrados do Astro ou uma implementação de terceiros.
+O valor deve ser um objeto com um entrypoint para o serviço de imagem a ser usado e opcionalmente, um objeto de configuração para passar ao serviço.
+
+O entrypoint do serviço pode ser tanto um dos serviços inclusos ou um pacote de terceiros.
 
 ```js
 {
   image: {
     // Exemplo: Habilite o serviço de imagem baseado no Sharp
-    service: 'astro/assets/services/sharp',
+    service: { entrypoint: 'astro/assets/services/sharp' },
   },
 }
 ```
