Update `endpoints.mdx` translation

--- a/src/content/docs/pt-br/core-concepts/endpoints.mdx
+++ b/src/content/docs/pt-br/core-concepts/endpoints.mdx
@@ -3,6 +3,7 @@ title: Endpoints
 description: Aprenda a criar endpoints que podem processar todo tipo de dados
 i18nReady: true
 ---
+import RecipeLinks from "~/components/RecipeLinks.astro";
 
 O Astro permite que você crie endpoints customizados para servir e processar todo tipo de dados. Isso pode ser usado para gerar imagens, expor um arquivo RSS ou os usar como rotas de API para construir uma API completa para o seu site.
 
@@ -32,7 +33,7 @@ O objeto retornado também pode conter a propriedade `encoding`. Ela deve ser um
 
 ```ts title="src/pages/builtwith.json.ts"
 export async function get({ params, request }) {
-  const response = await fetch("https://astro.build/assets/press/full-logo-light.png");
+  const response = await fetch("https://docs.astro.build/assets/full-logo-light.png");
   const buffer = Buffer.from(await response.arrayBuffer());
 
   return {
@@ -80,7 +81,9 @@ export function getStaticPaths () {
 }
 ```
 
-Dessa forma serão gerados três endpoints JSON durante a build: `/api/1.json`, `/api/2.json` e `/api/3.json`. O roteamento dinâmico com endpoints funciona da mesma forma que nas páginas, porém, como um endpoint é uma função e não uma página, [props](/pt-br/reference/api-reference/#passagem-de-dados-com-props) não são suportadas.
+Dessa forma serão gerados três endpoints JSON durante a build: `/api/0.json`, `/api/1.json` e `/api/2.json`. O roteamento dinâmico com endpoints funciona da mesma forma que nas páginas, porém, como um endpoint é uma função e não uma página, [props](/pt-br/reference/api-reference/#passagem-de-dados-com-props) não são suportadas.
+
+<RecipeLinks slugs={["pt-br/recipes/captcha", "pt-br/recipes/build-forms-api" ]}/>
 
 ### `request`
 Todos os endpoints recebem uma propriedade `request`, porém no modo estático você só tem acesso a propriedade `request.url`. Ela retorna o URL completo do endpoint atual e funciona da mesma forma que [Astro.request.url](/pt-br/reference/api-reference/#astrorequest) funciona em páginas.
@@ -108,7 +111,7 @@ Não se esqueça de [habilitar o modo SSR no seu projeto](/pt-br/guides/server-s
 
 Os endpoints do servidor tem acesso a propriedade `params` sem exportar a função `getStaticPaths` e podem retornar um objeto [`Response`](https://developer.mozilla.org/pt-BR/docs/Web/API/Response), permitindo que você defina códigos de status e cabeçalhos HTTP.
 
-```js title="src/pages/[id].json.js"
+```ts title="src/pages/api/[id].json.ts"
 import { getProduct } from '../db';
 
 export async function get({ params }) {
