Update `routing.mdx` translation

--- a/src/content/docs/pt-br/core-concepts/routing.mdx
+++ b/src/content/docs/pt-br/core-concepts/routing.mdx
@@ -4,6 +4,7 @@ description: Uma introdução a roteamento com Astro.
 i18nReady: true
 ---
 import FileTree from '~/components/FileTree.astro'
+import RecipeLinks from "~/components/RecipeLinks.astro"
 
 
 Astro utiliza **roteamento baseado em arquivos** para gerar as URLs da sua build com base na disposição dos arquivos do diretório `src/pages/` de seu projeto.
@@ -83,6 +84,8 @@ Isso irá gerar `/en-v1/info` e `/fr-v2/info`.
 Parâmetros podem ser incluidos em partes separadas do caminho. Por exemplo, o arquivo `src/pages/[lingua]/[versao]/info.astro` com o mesmo `getStaticPaths()` acima irá gerar as rotas `/en/v1/info` e `/fr/v2/info`.
 
 📚 Leia mais sobre [`getStaticPaths()`](/pt-br/reference/api-reference/#getstaticpaths).
+
+<RecipeLinks slugs={["pt-br/recipes/i18n"]} />
 
 #### Parâmetros Rest
 
