Update `client-side-scripts.mdx` translation

--- a/src/content/docs/pt-br/guides/client-side-scripts.mdx
+++ b/src/content/docs/pt-br/guides/client-side-scripts.mdx
@@ -70,7 +70,7 @@ Para evitar fazer o bundle do script, você pode adicionar a diretiva `is:inline
 ```
 
 :::note
-Adicionar `type="module"` ou qualquer atributo que não seja `src` a uma tag `<script>` irá desabilitar o comportamento padrão de bundling do Astro, tratando a tag como se tivesse uma diretiva `is:inline`.
+O comportamento padrão de bundling do Astro será desabilitado em algumas situações. Especialmente, ao adicionar `type="module"` ou qualquer outro atributo diferente de `src` a uma tag `<script>` irá fazer com que o Astro trate a tag como se ela tivesse a diretiva `is:inline`. O mesmo será verdade quando o script é escrito em uma expressão JSX.
 :::
 
 📚 Veja nossa página de [referência de diretivas](/pt-br/reference/directives-reference/#diretivas-de-script-e-estilização) para mais informações sobre as diretivas disponíveis em tags `<script>`.
