--- a/src/content/docs/pt-br/core-concepts/routing.mdx
+++ b/src/content/docs/pt-br/core-concepts/routing.mdx
@@ -85,7 +85,7 @@ Parâmetros podem ser incluidos em partes separadas do caminho. Por exemplo, o a
 
 📚 Leia mais sobre [`getStaticPaths()`](/pt-br/reference/api-reference/#getstaticpaths).
 
-<RecipeLinks slugs={["pt-br/recipes/i18n"]} />
+<RecipeLinks slugs={["en/recipes/i18n"]} />
 
 #### Parâmetros Rest
 
