Replace `pnpx` with `pnpm dlx`
Co-authored-by: Elian ☕️ <hello@elian.codes>

--- a/src/content/docs/en/guides/backend/xata.mdx
+++ b/src/content/docs/en/guides/backend/xata.mdx
@@ -29,7 +29,7 @@ npx degit xataio/examples/apps/starter-astro my-awesome-app
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-pnpx degit xataio/examples/apps/starter-astro my-awesome-app
+pnpm dlx degit xataio/examples/apps/starter-astro my-awesome-app
 
   ```
   </Fragment>
