Use `yarn dlx` instead of `npx`
Co-authored-by: Elian ☕️ <hello@elian.codes>

--- a/src/content/docs/en/guides/backend/xata.mdx
+++ b/src/content/docs/en/guides/backend/xata.mdx
@@ -35,8 +35,7 @@ pnpm dlx degit xataio/examples/apps/starter-astro my-awesome-app
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  # Yarn does not have a `npx` equivalent
-  npx degit xataio/examples/apps/starter-astro my-awesome-app
+  yarn dlx degit xataio/examples/apps/starter-astro my-awesome-app
   ```
   </Fragment>
 </PackageManagerTabs>
