--- a/src/content/docs/es/guides/integrations-guide/svelte.mdx
+++ b/src/content/docs/es/guides/integrations-guide/svelte.mdx
@@ -127,7 +127,7 @@ export default {
 };
 ```
 
-## Intellisense for TypeScript
+## Intellisense para TypeScript
 
 **Añadido en:** `@astrojs/svelte@2.0.0`
 
