--- a/src/content/docs/es/guides/integrations-guide/svelte.mdx
+++ b/src/content/docs/es/guides/integrations-guide/svelte.mdx
@@ -143,4 +143,4 @@ export default {
 };
 ```
 
-Este archivo de configuración se agregará automáticamente por ti cuando ejecutes `astro add svelte`.
+Este archivo de configuración se agregará automáticamente cuando ejecutes `astro add svelte`.
