--- a/src/content/docs/es/guides/integrations-guide/partytown.mdx
+++ b/src/content/docs/es/guides/integrations-guide/partytown.mdx
@@ -108,7 +108,7 @@ export default defineConfig({
 
 ### config.forward
 
-Los scripts de terceros suelen agregar variables al objeto `window` ara que puedas comunicarte con ellos en todo tu sitio. Pero cuando un script se carga en un web worker, no tiene acceso a ese objeto `window` global.
+Los scripts de terceros suelen agregar variables al objeto `window` para que puedas comunicarte con ellos en todo tu sitio. Pero cuando un script se carga en un web worker no tiene acceso a ese objeto `window` global.
 
 Para solucionar esto, Partytown puede "parchar" las variables al objeto global de ventana y reenviarlos al script correspondiente.
 
