--- a/src/content/docs/en/reference/error-reference.mdx
+++ b/src/content/docs/en/reference/error-reference.mdx
@@ -48,6 +48,10 @@ The following reference is a complete list of the errors you may encounter while
 - [**ExpectedImageOptions**](/en/reference/errors/expected-image-options/) (E03028)<br/>Expected image options.
 - [**MarkdownImageNotFound**](/en/reference/errors/markdown-image-not-found/) (E03029)<br/>Image not found.
 - [**ResponseSentError**](/en/reference/errors/response-sent-error/) (E03030)<br/>Unable to set response
+- [**MiddlewareNoDataOrNextCalled**](/en/reference/errors/middleware-no-data-or-next-called/) (E03031)<br/>The middleware didn't return a response or call `next`
+- [**MiddlewareNotAResponse**](/en/reference/errors/middleware-not-aresponse/) (E03032)<br/>The middleware returned something that is not a `Response` object
+- [**LocalsNotAnObject**](/en/reference/errors/locals-not-an-object/) (E03033)<br/>Value assigned to `locals` is not accepted
+- [**LocalsNotSerializable**](/en/reference/errors/locals-not-serializable/) (E03034)<br/>`Astro.locals` is not serializable
 - [**UnknownViteError**](/en/reference/errors/unknown-vite-error/) (E04000)<br/>Unknown Vite Error.
 - [**FailedToLoadModuleSSR**](/en/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/en/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
